Update lineare_ligningssystemer.tex, linearkom.tex, and 5 more files...

--- a/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/linearkom.tex
@@ -1,16 +1,15 @@
 \subsection{Linearkombination}
 %
-% Et eller andet metatekst her.
-%
-\textbf{Linearkombination} er en essentiel del af lineær algebra. 
+\textbf{Linearkombination} er en centralt del af lineær algebra, da det benyttes i forbindelse med løsning af ligningssystemer. 
 %
 \begin{defn}{}{mxlinkom}
-Givet matricerne $A_1, A_2, \ldots, A_k$ med størrelsen $m \times n$, så er linearkombinationen af $A_1, A_2, \ldots, A_k$ en matrix $B$ på formen 
+Givet vektorer $\mathbf{u}_1, \mathbf{u}_2, \ldots, \mathbf{u}_k$ med størrelsen $m \times n$, så er linearkombinationen af $\mathbf{a}_1, \mathbf{u}_2, \ldots, \mathbf{u}_k$ en vektor $\mathbf{v}$ på formen 
 %
-$$c_1A_1+c_2A_2+\ldots+c_kA_k=\sum\limits_{i=1}^k c_iA_i=B,$$
+\begin{align*}
+c_1\mathbf{u}_1+c_2\mathbf{u}_2+\ldots+c_k\mathbf{u}_k=\sum\limits_{i=1}^k c_i\mathbf{u}_i=\mathbf{v},
+\end{align*}
 %
-med størrelsen $m \times n$. 
-Linearkombinationen er mulig, hvis og kun, hvis skalarerne $c_1, c_2, \ldots, c_k$ eksisterer. 
+med størrelsen $m \times n$, hvor $c_1, c_2, \ldots, c_k$ er skalarerne.
 Skalarerne kaldes linearkombinationens koefficienter.
 \end{defn}
 %
@@ -18,7 +17,6 @@ Skalarerne kaldes linearkombinationens koefficienter.
 %
 \noindent 
 %
-I lineær algebra er det oftest række- eller søjlevektorer, der indgår i linearkombinationer. 
 En linearkombination af én vektor er blot en skalering af vektoren.
 \\
 %
@@ -49,7 +47,7 @@ $$
 \end{bmatrix},
 $$
 samt $c_a=-4$, $c_b=100$ og $c_c=2$. 
-Jævnfør definition \ref{defn:mxlinkom} er linearkombinationen af $\textbf{a}$, $\textbf{b}$ og $\textbf{c}$
+Jævnfør definition \ref{defn:mxlinkom} er linearkombinationen af $\textbf{a}$, $\textbf{b}$ og $\textbf{c}$:
 $$
 (-4)
 \begin{bmatrix}
@@ -84,39 +82,47 @@ $$
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 Enhver vektor 
-$
+\begin{align*}
 \textbf{a}=
 \begin{bmatrix}
-a_1 & a_2 & \ldots & a_n
-\end{bmatrix}^T
-$
-i $\R^n$ kan skrives som linearkombination af $I_n$ i $R^n$. 
-Givet to ikke-parallelle vektorer $u$ og $v$ i $\R^2$, så er enhver anden vektor i $\R^2$ en linearkombination af $u$ og $v$. 
+a_1 \\
+a_2 \\
+\vdots \\
+a_n
+\end{bmatrix}
+\end{align*}
+%
+i $\R^n$ kan skrives som linearkombination af $I_n$ i $\R^n$. 
+Givet to ikke-parallelle vektorer $\mathbf{u}$ og $\mathbf{v}$ i $\R^2$, så er enhver anden vektor i $\R^2$ en linearkombination af $\mathbf{u}$ og $\mathbf{v}$. 
 Hvis koefficienterne i en linearkombination er vektorer, så er der tale om et \textbf{matrix-vektorprodukt}.
 %
 %
 %
 %
 \subsection{Matrix-vektorprodukt}
+%
+Som udvidelse til linearkombinationen kan der tales om et\textbf{matrix-vektorprodukt}.
+%
 %Altså, jeg vil måske mene, at nedenstående definition minder for meget om den i bogen (s. 19). Men igen... "Det er heller ikke ham, der har fundet på det." - Mads Vejleder, 2019. 
+%
 \begin{defn}{}{mvp}
-Lad $A$ være en $m \times n$ matrix og \textbf{v} være en $n \times 1$ vektor. 
-Matrix-vektorproduktet af $A$ og $\textbf{v}$ defineres som linearkombinationen af søjlerne i $A$, hvis koefficienter er de tilsvarende komponenter af $\textbf{v}$, og noteres $A\textbf{v}$. 
+Lad $A$ være en $m \times n$ matrix og \textbf{u} være en $n \times 1$ vektor. 
+Matrix-vektorproduktet af $A$ og $\textbf{u}$ defineres som linearkombinationen af søjlerne i $A$, hvis koefficienter er de tilsvarende komponenter af $\textbf{u}$, hvilket noteres $A\textbf{u}$. 
 Dermed er
 \begin{align*}
-A\textbf{v} =v_1\textbf{a}_1 + v_2\textbf{a}_2 + \cdots + v_n\textbf{a}_n.
+A\textbf{u} =u_1\textbf{a}_1 + u_2\textbf{a}_2 + \cdots + u_n\textbf{a}_n.
 \end{align*}
 \end{defn}
 \noindent
-For at $A\textbf{v}$ eksisterer, skal der være lige mange komponenter i \textbf{v}, som der er søjler i $A$. 
-Et eksempel på et matrix-vektorprodukt mellem en matrix $B$ og en vektor \textbf{u} ses i eksempel \ref{Matrix-vektor}.
+For at $A\textbf{u}$ eksisterer, skal der være lige mange komponenter i \textbf{v}, som der er søjler i $A$. 
+Et eksempel på et matrix-vektorprodukt mellem en matrix $A$ og en vektor \textbf{u} ses i eksempel \ref{Matrix-vektor}.
 \\
 %
 \begin{eks}
 \label{Matrix-vektor}
 %
 Lad
-$$B=
+$$A=
 \begin{blockarray}{c c c c}
 \begin{block}{[c c c c]}
 2 & 5 & 6 \\
@@ -136,9 +142,9 @@ $$B=
 \end{bmatrix}.
 $$
 %
-Eftersom $B$ har 3 søjler og \textbf{u} har 3 komponenter, så eksisterer $B\textbf{u}$ og findes ved
+Eftersom $A$ har 3 søjler og \textbf{u} har 3 komponenter, så eksisterer $A\textbf{u}$ og findes ved
 $$
-B\textbf{u}=
+A\textbf{u}=
 \begin{bmatrix}
 2 & 5 & 6 \\
 4 & 7 & 3\\
