--- a/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/mxmulti.tex
@@ -1,6 +1,6 @@
 \subsection{Matrixmultiplikation}
 
-Der er ofte nødvendigt at multiplicere matricer med andre matricer. 
+Det er ofte nødvendigt at multiplicere matricer med andre matricer. 
 \begin{defn}{}{}\label{def:mxmulti}
 Matrixproduktet $AB$ af en $m \times n$ matrix $A$ og en $n \times p$ matrix $B$ er en $m \times p$ matrix $C$, 
 $$
@@ -11,6 +11,7 @@ A\textbf{b}_1 & A\textbf{b}_2 & \ldots & A\textbf{b}_p
 $$
 hvor $A\textbf{b}_j$ er den $j$'te række i $C$.
 \end{defn}
+\noindent
 %
 Som det fremgår af definition \ref{def:mxmulti}, skal antallet af søjler i $A$ tilsvare antallet af rækker i $B$, for at $AB$ er defineret og matrixmultiplikation dermed er muligt. 
 Bemærk, at selvom $AB$ er defineret, er $BA$ ikke nødvendigvis defineret. 
