--- a/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
+++ b/incl/main/linear_algebra/matricer_vektorer/specmatricer.tex
@@ -1,27 +1,9 @@
-\subsection{Specielle matricer} 
-% Skal måske hedde noget andet? 
-To specielle matricer er nødvendige at introducere, da de benyttes i nærværende projekt. Den første er \textbf{nulmatricen}. I en nulmatrice er alle elementer $0$, og en $m \times n$ nulmatrice noteres $0_{m,n}$.
+\subsection{Udvalgte matricer og vektorer} 
 % 
-% Er det korrekt notation? Fandt det på wiki hehehehe
+Hvis alle indgange i en matrix er nul, kaldes dette for en \textbf{nulmatrix}. 
+En $m \times n$ nulmatrix noteres $O_{m,n}$.
 %
-\\\\
-Den anden specielle matrice er \textbf{identitetsmatricen}. 
-%
-\begin{defn}{}{}
-%
-En $n \times n$, $n \in \Z^+$, identitetsmatrice $I_n$ består af alle standardvektorer $\textbf{e}_1, \textbf{e}_2, \ldots, \textbf{e}_n$ i $R^n$, således 
-$$
-I_n=
-\begin{bmatrix}
-\textbf{e}_1 & \textbf{e}_2 & \ldots & \textbf{e}_n
-\end{bmatrix}.
-$$ 
-\end{defn}
-\noindent
-%
-Standardvektorerne i $\R^n$ er defineret ved 
-%
-% Kan evt. kommer inden definitionen, men kan bedst lide denne rækkefølge. 
+Et andet særtilfælde er standardvektorerne i $\R^n$, som er defineret ved  
 %
 $$
 \textbf{e}_1=
@@ -51,3 +33,16 @@ $$
 \end{bmatrix}
 \text{. }
 $$
+%
+\begin{defn}{}{}
+%
+En $n \times n$, $n \in \Z^+$, \textbf{identitetsmatrix} $I_n$ består af alle standardvektorer $\textbf{e}_1, \textbf{e}_2, \ldots, \textbf{e}_n$ i $R^n$, således 
+$$
+I_n=
+\begin{bmatrix}
+\textbf{e}_1 & \textbf{e}_2 & \ldots & \textbf{e}_n
+\end{bmatrix}.
+$$ 
+\end{defn}
+\noindent
+%
