--- a/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
+++ b/incl/main/linear_algebra/lineare_ligningssystemer/lineare_ligningssystemer.tex
@@ -1,20 +1,20 @@
 \section{Lineære ligningssystemer }
 %
 En \textbf{lineær ligning} med variablerne $x_1,x_2,\ldots ,x_n$ er en ligning, som har formen
-$$ a_1x_1+a_2x_2+\cdots+a_nx_n=b \text{,}$$ 
-hvor $\{a_1,a_2,\ldots,a_n\} \in \R$. 
-%Er ovenstående korrekt notation? Eller skal der ikke være tuborgklammer om a_1.... osv.?
+$$ c_1x_1+c_2x_2+\cdots+c_nx_n=b \text{,}$$ 
+hvor $\{c_1,c_2,\ldots,c_n\} \in \R$. 
+%
 \begin{defn}{}{linlignsys}
-Et \textbf{lineært ligningssystem} er en mængde af $m$ lineære ligninger  med de samme $n$ variabler, hvor $\{m, n\} \in \Z^+$.
+Et \textbf{lineært ligningssystem} er en mængde af $m$ lineære ligninger med de samme $n$ variable, hvor $\{m, n\} \in \Z^+$.
 Dette kan skrives på formen
 \begin{align*}
-a_{11}x_1+a_{12}x_2+&\cdots+a_{1n}x_n=b_1\\
-a_{21}x_1+a_{22}x_2+&\cdots+a_{2n}x_n=b_2\\
+c_{11}x_1+c_{12}x_2+&\cdots+c_{1n}x_n=b_1\\
+c_{21}x_1+c_{22}x_2+&\cdots+c_{2n}x_n=b_2\\
 &\vdots\\
-a_{m1}x_1+a_{m2}x_2+&\cdots +a_{mn}x_n=b_m
+c_{m1}x_1+c_{m2}x_2+&\cdots +c_{mn}x_n=b_m
 \text{,}
 \end{align*}
-hvor $a_{ij}$ betegner koefficienten af $x_j$ i ligning $i$.
+hvor $c_{ij}$ betegner koefficienten af $x_j$ i ligning $i$.
 \end{defn}
 \noindent
 Løsningen på et sådant system er en vektor
@@ -34,7 +34,7 @@ i $\R ^n$, således at alle ligninger er opfyldt, når $x_i$ erstattes med $s_i$
 \\
 \begin{eks}
 \label{ekslignsys}
-Givet ligningssystemet
+Understående er et lineært ligningssystem, bestående af tre ligninger.
 %
 \begin{align*}
 x_1-x_3-2x_4-8x_5&=-3 \\
@@ -48,14 +48,15 @@ Løsningen på dette system ses i eksempel \ref{eks_gauss}.
 %
 \end{eks}
 Alle lineære ligningssystemer har enten ingen, én eller uendeligt mange løsninger.
-%Alle ligningerne i systemet repræsenteres af linjer, hvis systemet er i 2 variable, og et plan i 3 variable, osv.
-%Ovenstående omskriver jeg til:
-Ligninger i $R^2$ repræsenteres af linjer, i $R^3$ repræsenteres de af en plan, og så videre.
-%Er det en eller et plan? Hess siger altid "en"... Hmmmmm.. 
+Ligninger i $\R^2$ kan repræsenteres ved linjer og i $\R^3$ kan de repræsenteres ved planer.
+% Er det en eller et plan? Hess siger altid "en"... Hmmmmm.. 
 Hvis disse ligninger er parallelle og forskellige, har systemet ingen løsning.
 Hvis ligningerne er forskellige, så har systemet præcis én løsning, hvor ligningerne krydser hinanden. 
 Hvis ligningerne er ens, har systemet uendeligt mange løsninger.\\
 Et system der har én eller flere løsninger kaldes \textbf{konsistent}; ellers kaldes det \textbf{inkonsistent}, da der ingen løsninger eksisterer.
+%
+%
+%
 \subsection{Ligningssystemer og matricer}
 Med udgangspunkt i eksempel \ref{ekslignsys} kan et lineært ligningssystem opstilles som en matrixligning $A\textbf{x}=\textbf{b}$, hvor
 $$A=
