--- a/incl/pre/cmds.tex
+++ b/incl/pre/cmds.tex
@@ -13,6 +13,7 @@
 \newcommand{\bigO}{\mathcal{O}}      % store-O notation
 \renewcommand{\S}{\mathcal{S}}		 % Pænt S?
 \renewcommand{\vec}[1]{\bm{#1}}      % skriv vektorer med fed skrift
+\newcommand\hlight[1]{\tikz[overlay, remember picture,baseline=-\the\dimexpr\fontdimen22\textfont2\relax]\node[rectangle,fill=blue!50,rounded corners,fill opacity = 0.2,draw,thick,text opacity =1] {$#1$};}
 \usepackage{xcolor}
 \usepackage{pgfplots}
 
