--- a/incl/main/linear_algebra/span/span.tex
+++ b/incl/main/linear_algebra/span/span.tex
@@ -1,6 +1,6 @@
 \subsection{Span}
 % 1.6
-\textbf{Spannet} er den del af vektorrummet, som en given mængde vektorer dækker over. 
+\textbf{Spannet} er den del af vektorrummet, som linearkombinationen af en given mængde vektorer dækker over. 
 %
 \begin{defn}{}{}
 %
@@ -78,7 +78,7 @@ Eftersom $\mathbf{u}_2$ er en mulig linearkombination af $\mathbf{u}_1$, kan det
 \right\}.
 \end{align*}
 %
-Mængden $\S_2$ kan derfor reduceres til $\S_2=\{ \mathbf{u}_1, \mathbf{u}_2 \}$. 
+Mængden $\S_2$ kan derfor reduceres til $\S_2=\{ \mathbf{u}_1, \mathbf{u}_3 \}$. 
 Spannet for $\S_2$ er derfor
 %
 \begin{align*}
@@ -124,6 +124,7 @@ Dette gør den, da det er muligt at besøge alle punkter ved at indføre passend
 %
 Typisk bruges span til at undersøge, hvorvidt en given vektor er i spannet for en vektormængde. 
 Dette gøres ved at undersøge om en vektor kan konstrueres som linearkombination af vektorerne i mængden, hvilket undersøges ved hjælp af rækkereduktionsalgoritmen. 
+\\
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -171,8 +172,12 @@ A=&
   2 & 1 & -1 & 2 \\
   1 & 0 & -2 & 3 \\
 \end{block}
-\end{blockarray} \\
+\end{blockarray} 
+\end{align*}
 %
+Denne omskrives nu til trappeform
+%
+\begin{align*}
 \xrightarrow[R_3 \rightarrow R_3-R_1]{R_2 \rightarrow R_2-2R_1}&
 \begin{blockarray}{ccccc}
 \mathbf{u}_1 & \mathbf{u}_2 & \mathbf{u}_3 & \mathbf{v} \\
@@ -200,7 +205,7 @@ Ud fra dette ses det, at $\mathbf{v}$ er i $\text{span}\{\S \}$.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-Egenskaberne vedrørende span kan udtrykkes på forskellige måder, hvilket leder til følgende sætning:
+Egenskaberne vedrørende spannet kan udtrykkes på forskellige måder, hvilket leder til følgende sætning:
 % 
 \begin{thm}{}{}
 %
@@ -210,7 +215,7 @@ De følgende udsagn om en $m \times n$ matrix $A$ er ækvivalente:
 \item Spannet af søjlerne i $A$ er $\R^m$.
 \item Matricen $A\mathbf{x}=\mathbf{b}$ har mindst én løsning for alle $b$ i $\R^m$.
 \item Rangen af $A$ er antallet af rækker $m$.
-\item Den reducerede trappeform har ingen nulrækker 
+\item Den reducerede trappeform har ingen nulrækker.
 \item Der er pivot-indgang i hver række i $A$. 
 \end{enumerate}
 %
@@ -219,16 +224,12 @@ De følgende udsagn om en $m \times n$ matrix $A$ er ækvivalente:
 %
 \begin{proof}
 %
-Udsagn $(a)$ og $(b)$ er ækvivalente, eftersom det er en forudsætning, at der kan skabes en linear kombination af $A\mathbf{x} =\mathbf{b}$ for ethvert $\mathbf{b}$ i $\R^m$, da det netop er definitionen af spannet, der dækker $\R^m$. Dette er jævnfør sætning \ref{thm:konsistens}.
+Udsagn (a) og (b) er ækvivalente, eftersom det er en forudsætning, at der kan skabes en linear kombination af $A\mathbf{x} =\mathbf{b}$ for ethvert $\mathbf{b}$ i $\R^m$, da det netop er definitionen af spannet, der dækker $\R^m$. 
 %
-%
-%%%%%%%%% Spannen? Spannet? Vælg én. (jeg stemmer spannet). 
-%
-%
-Hvis der ikke er nogle nul-rækker i den reducerede trappeform, følger det, at $\text{rang}\{A\}$ er $m$, hvorfor $(c)$ og $(d)$ er ækvivalente. 
-Eftersom matrixen er på reduceret trappeform, er denne derfor ækvivalent med $(e)$.
+Hvis der ikke er nogle nul-rækker i den reducerede trappeform, følger det, at $\text{rang}\{A\}$ er $m$, hvorfor (c) og (d) er ækvivalente. 
+Eftersom matrixen er på reduceret trappeform, er denne derfor ækvivalent med (e).
 \\\\
-Det skal nu bevises at $(b)$ og $(c)$ er ækvivalente. 
+Det skal nu bevises at (b) og (c) er ækvivalente. 
 Lad $B$ være den reducerede trappeform af $A$, og $\mathbf{e}_m$ er standard vektoren
 %
 \begin{align*}
@@ -252,24 +253,24 @@ så følger det, at ligningssystemet $A\mathbf{x}=\mathbf{
 d}$ er ækvivalent med $B\mathbf{x}=\mathbf{e}_m$.
 \\\\
 Hvis (b) er sand, følger det, at de to ligningssystemer er konsistente. 
-Det følger derfor af sætning \ref{thm:konsistens}, at den sidste række ikke kan være en nulrække, da den på grund af standardvektoren $\mathbf{e}_m$ således vil have pivotindgang i sidste søjle og derfor vil ligningssystemet være inkonsistent.
-Dermed er rangen af $rang(A)=m$, hvilket beviser (c).
+Det følger derfor af sætning \ref{thm:konsistens}, at den sidste række ikke kan være en nulrække, da standardvektoren $\mathbf{e}_m$ vil have pivotindgang i sidste søjle og derfor vil ligningssystemet være inkonsistent.
+Dermed er $rang(A)=m$, hvilket leder til (c).
 % Dette kan eventuelt forklares dybere xD
+\\\\
 Antag, at (c) er sand. 
-Lad $[B \text{    } \mathbf{c}]$ 
+Lad $[B \text{    }| \mathbf{c}]$ 
 være den reducerede trappeform af 
-$[A \text{    } \mathbf{b}]$.
-Eftersom $A$ har rangen $m$, følger det, at $B$ ikke indeholder en række, hvori der ikke er et nul.  
-%%% Til ovenstående: At der ikke findes en ikke-nulrække i $B$
+$[A \text{    } | \mathbf{b}]$.
+Eftersom $A$ har rangen $m$, følger det, at der ikke findes en nulrække i $B$.
 Derfor kan $[B \text{    } \mathbf{c}]$ ikke indeholde en nulrække, hvis eneste nulindgang er i sidste søjle. 
-Det følger derfor jævnfør sætning \ref{thm:konsistens}, at $A\mathbf{x}=\mathbf{b}$ er konsistent $\forall \mathbf{b}$.
+Det følger derfor jævnfør sætning \ref{thm:konsistens}, at $A\mathbf{x}=\mathbf{b}$ er konsistent $\forall \mathbf{b}$, hvilket beviser at (b) og (c) er ækvivalente.
 %
 \end{proof}
 \\
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-Når det skal afgøres, hvorvidt en vektor tilhører et givet span, gælder \ref{thm:span}.
+Når det skal afgøres, hvorvidt en vektor tilhører et givet span, gælder sætning \ref{thm:span}.
 %
 \begin{thm}{}{span}
 %
@@ -282,7 +283,8 @@ Så er $\text{span}\{ \mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k , \math
 \begin{proof}
 %
 Antag, at $\mathbf{v}$ er i $\text{span}\{\S\}$. Så er $\mathbf{v}$ en linearkombination af $\S$, hvilket kan opskrives som $\mathbf{v}=a_1\mathbf{u}_1+a_2\mathbf{u}_2+ \ldots + a_k\mathbf{u}_k$, hvor $a_1,a_2,\ldots, a_k$ er skalarer. 
-Hvis en vektor $\mathbf{w}$ er i $\text{span}\{ \mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k , \mathbf{v}\}$, kan denne opskrives $\mathbf{v}=c_1\mathbf{u}_1+c_2\mathbf{u}_2+ \ldots + c_k\mathbf{u}_k+b\mathbf{v}$, hvor $c_1,c_2,\ldots, c_k$ er skalarer.
+Hvis en vektor $\mathbf{w}$ er i $\text{span}\{ \mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k , \mathbf{v}\}$, 
+kan denne opskrives $\mathbf{w}=c_1\mathbf{u}_1+c_2\mathbf{u}_2+ \ldots + c_k\mathbf{u}_k+b\mathbf{v}$, hvor $c_1,c_2,\ldots, c_k, b$ er skalarer.
 Ved substitution af $\mathbf{v}$ med $\{ \mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k , \mathbf{v}\}$ vides det, at $\mathbf{w}$ kan opskrives som en linearkombination af $\S$. 
 Det gælder endvidere, at alle linearkombinationer i $\S$ også kan dannes fra vektorerne $\mathbf{u}_1,\mathbf{u}_1, \mathbf{u}_2 , \ldots , \mathbf{u}_k , \mathbf{v}$, hvis $\mathbf{v}$ ganges med skalaren $0$.
 Det følger derfor, at de to mængder har samme span. 
