--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -13,12 +13,141 @@ Ellers kaldes vektorerne \textbf{lineært afhængige}.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Eksempel
-\begin{eks}
+\begin{eks}\label{lineu}
+Lad et sæt af vektorer være
+\begin{align*}
+\S &= \left\{
+\begin{bmatrix}
+           2 \\
+           1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+           3 \\
+           2 \\
+\end{bmatrix}
+\right\}
+\end{align*}
+\noindent
+Bestem om vektorerne er lineært uafhængige ved ligningen, altså hvis $x_1$ og $x_2 = 0$
+\begin{align*}
+x_1+
+\begin{bmatrix}
+           2 \\
+           1 \\
+\end{bmatrix}
++ x_2
+\begin{bmatrix}
+           3 \\
+           2 \\
+\end{bmatrix}
+=0 \\
+\end{align*}
 
+Ligningerne udskrives
+\noindent
+\begin{align*}
+2x_1+3x_2=0\\
+x_1+2x_2=0\\
+\\
+x_1+3/2x_2=0\\
+x_1+2x_2=0\\
+\\
+x_1+2x_2=0 - x_1+3/2x_2=0\\
+1/2c_2=0\\
+c_2=0\\
+c_1=0\\
+\end{align*}
+Da $c_1$ og $c_2 = 0$, så er sættet $\S$ lineært uafhængigt.
+\\
+\\
+\noindent
+Lad et sæt af vektorer være 
+\begin{align*}
+\S &= \left\{
+\begin{bmatrix}
+           2 \\
+           1 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+           3 \\
+           2 \\
+\end{bmatrix}
+,
+\begin{bmatrix}
+           1 \\
+           2 \\
+\end{bmatrix}
+\right\}
+\end{align*}
+\noindent
+Bestem om vektorerne er lineært afhængige ved ligningen, altså hvis $x_1$, $x_2$ og $x_3 \neq 0$
+\begin{align*}
+x_1+
+\begin{bmatrix}
+           2 \\
+           1 \\
+\end{bmatrix}
++ x_2
+\begin{bmatrix}
+           3 \\
+           2 \\
+\end{bmatrix}
++ x_3
+\begin{bmatrix}
+           1 \\
+           2 \\
+\end{bmatrix}
+=0 \\
+\end{align*}
+Ligningerne udskrives 
+
+\begin{align*}
+2x_1+3x_2+c_3=0\\
+x_1+2x_2+2c_3=0 \\
+\end{align*}
+\noindent
+Nu findes en linearkombination, som ikke er nul. Vi sætter tilfældigt $x_3 = -1$ og forsøger om ligningen kan løses
+\begin{align*}
+2x_1+3x_2-1=0\\
+x_1+2x_2-2=0\\
+\\
+2x_1+3x_2-1=0\\
+2x_1+4x_2-4=0\\
+\\	 
+2x_1+3x_2-1=0 - 2x_1+4x_2-4=0 \\
+-x_2+3=0\\
+-x_2=-3\\
+x_2=3\\
+\\
+x_1+6+2\\
+x_1+4=0\\
+x_1=-4\\
+\end{align*}
+Linearkombinationen er derfor ¨
+\begin{align*}
+-4+
+\begin{bmatrix}
+           2 \\
+           1 \\
+\end{bmatrix}
++ 3
+\begin{bmatrix}
+           3 \\
+           2 \\
+\end{bmatrix}
++ -1
+\begin{bmatrix}
+           1 \\
+           2 \\
+\end{bmatrix}
+=0 \\
+\end{align*}
+Derfor har vi minimum fundet én linearkombination som er ikke-nul, som giver os nulvektoren, og derfor er det bevist at vektorsættet lineært afhængig.
 \end{eks}
-% 
-\textcolor{red}{Motiverende tekst til næste sætning}
-%
+I eksempel \ref{lineu} viste en af måderne hvorpå man kunne bestemme om et bestemt set $\S$ var lineært afhængigt eller uafhængigt. Der findes flere måder at bestemme dette på. Denne følgende sætning viser en lignende teknik til bestemmelse heraf. 
+
 \begin{thm}{}{}
 %
 Lad $A$ være en $m \times n$ matrix.
@@ -37,29 +166,38 @@ Følgende udsagn er ækvivalente:
 \end{thm}
 %
 \begin{proof}
+\noindent
+Det er forudsagt, at (a) og (f), samt (f) og (g) er ækvivalente, så for at færdiggøre beviset for denne sætning, skal det vises, at(b) $\rightarrow$ (c), (c) $\rightarrow$ (d),(d) $\rightarrow$ (e),(e) $\rightarrow$ (f), (f) $\rightarrow$ (b).
 %
-\textcolor{red}{Mangler resten af beviset - Hele beviset side 79 i bogen
-%
-(a) $\rightarrow$ (f)
-(f) $\rightarrow$ (g)
-(b) $\rightarrow$ (c)
-(c) $\rightarrow$ (d)
-(d) $\rightarrow$ (e)
-(e) $\rightarrow$ (f)
-(f) $\rightarrow$ (b)
-%
-}
-Lad $\mathbf{b}=\mathbf{0}$. 
-Ligningssystemet $A\mathbf{x}=\mathbf{b}$ har altid løsningen $\mathbf{x}=\mathbf{0}$, der derfor er den eneste løsning til $A\mathbf{x}=\mathbf{0}$, hvilket beviser (b) $\rightarrow$ (e).
-\\
+
+\itemize 
+\item (b) $\rightarrow$ (c) 
+Idet, at $\mathbf{0}$ er en løsning til $A\mathbf{x}=\mathbf{b}$, så forudsætter (b) at $A\mathbf{x}=\mathbf{b}$ har ingen ikke-nul løsninger, da den generelle løsning ingen frie variable, har. Da antallet af frie variable er nulliteten i A og dette er 0, så beviser det (b) $\rightarrow$ (c). 
+
+\item (c) $\rightarrow$ (d)
+Idet, at $\text{rang}(A)+\text{null}(A)=n$, så medfører det øjeblikkeligt, at (c) $\rightarrow$ (d).
+
+
+\item (d) $\rightarrow$ (e)
+Hvis $\text{rang}(A)=n$, så betyder det, at enhver søjle i A har en pivotindgang i søjlen, som derfor betyder, at den reducerede trappeform indeholder udelukkende standard vektorer. Disse standardvektorer er nødvendigvis forskellige, da hver søjle indeholder den første ikke-nul indgang i hver række. Dette beviser (d) $\rightarrow$ (e)
+
+
+\item (e) $\rightarrow$ (f)
+Lad $R$ være den reducerede trappeform af matricen $A$. Hvis søjlerne i $R$ er forskellige standardvektorer i $R^m$, så er $R=\mathbf{e_1}, mathbf{e_2}, \ldots, mathbf{e_n}]$. Det er givet, at den eneste løsning til $R\mathbf{x}=\mathbf{0}$, er 0, og idet at $A\mathbf{x}=\mathbf{0}$, er ækvivalent til $R\mathbf{x}=\mathbf{0}$, så er den $\mathbf{0}$ eneste løsning til A$\mathbf{x}=\mathbf{0}$. Dette beviser (e) $\rightarrow$ (f).
+ 
+\item (f) $\rightarrow$ (b)
 Lad $\mathbf{u}, \mathbf{v}$ være løsninger til $A\mathbf{x}=\mathbf{b}$.
 % Sætning 1.3
 Jævnfør sætning \ref{fisk}, følger det at $A(\mathbf{u}-\mathbf{v})=A\mathbf{u}-A\mathbf{v}=\mathbf{b}-\mathbf{b}=\mathbf{0}$, hvilket tilsvarer $\mathbf{u}-\mathbf{v}=\mathbf{0}
 \rightarrow  
-\mathbf{u} =\mathbf{v}$, hvilket beviser (e) $\rightarrow$ (b)
-%
-%
+\mathbf{u} =\mathbf{v}$, hvilket beviser (f) $\rightarrow$ (b)
+
 \end{proof}
+%
+%Lad $\mathbf{b}=\mathbf{0}$. 
+%Ligningssystemet $A\mathbf{x}=\mathbf{b}$ har altid løsningen $\mathbf{x}=\mathbf{0}$, der derfor er den eneste løsning til $A\mathbf{x}=\mathbf{0}$, hvilket beviser (b) $\rightarrow$(e).
+% Julie, det her var noget du havde skrevet. Jeg ved ikke helt hvilken den hørte til /MG???
+%
 \\
 %
 \textcolor{green}{Tekst om det her med at den er afhængig hvis nul-vektoren er en af dem, 2 af dem er parallele eller hvis det er flere vektorer end deres koordinater.}
