Update linear_uafhangighed.tex and master.tex

--- a/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
+++ b/incl/main/linear_algebra/linear_uafhangighed/linear_uafhangighed.tex
@@ -125,7 +125,7 @@ x_1+6+2\\
 x_1+4=0\\
 x_1=-4\\
 \end{align*}
-Linearkombinationen er derfor ¨
+Linearkombinationen er derfor
 \begin{align*}
 -4+
 \begin{bmatrix}
