--- a/fig/tikz/dom.tex
+++ b/fig/tikz/dom.tex
@@ -1,37 +1,41 @@
 \begin{figure}[h!]
   \centering
   \begin{tikzpicture}
-    \tikzset{punkt/.style={point, draw=black}}\draw[color=black](2,-2) circle (1.5);
-	\draw[color=black](6,-2) circle (1.5);  
-	\draw[color=black, fill=myblue!15](6,-2) circle (0.75);  
+    \tikzset{punkt/.style={point, draw=black}}\draw[color=black](1,-2) circle (2.5);
+	\draw[color=black](7,-2) circle (2.5);  
+	\draw[color=black, fill=myblue!15](7,-2) circle (1.5);  
 %Punkter
-	\draw  node[fill,circle,inner sep=0pt,minimum size=3pt] at (2,-2.65)  (v1) {};
-	\draw  node[fill,circle,inner sep=0pt,minimum size=3pt] at (2,-1.35)  (v2) {};
-	\draw  node[fill,circle,inner sep=0pt,minimum size=3pt] at (6,-2)  (v3) {};
+	\draw  node[fill,circle,inner sep=0pt,minimum size=3pt] at (1,-2.65)  (v1) {};
+	\draw  node[fill,circle,inner sep=0pt,minimum size=3pt] at (1,-1.35)  (v2) {};
+	\draw  node[fill,circle,inner sep=0pt,minimum size=3pt] at (7,-2)  (v3) {};
 
 %Labels
-	\draw  node at (1.75,-2.55)  {$\textbf{u}$};
-	\draw  node at (1.75,-1.25)  {$\textbf{v}$};
-	\draw  node at (6.25,-1.85)  {$\textbf{w}$};
+	\draw  node at (0.75,-2.55)  {$\textbf{u}$};
+	\draw  node at (0.75,-1.25)  {$\textbf{v}$};
+	\draw  node at (7.25,-1.85)  {$\textbf{w}$};
 	
 	
 	
 	%Navn på cirklerne 
-	\draw[black, fill=black] (1.75,-0) circle (0pt) node[anchor=west] {$V_1$};    
-	\draw[black, fill=black] (5.75,-0) circle (0pt) node[anchor=west] {$V_2$};
+	\draw[black, fill=black] (1.25,1) circle (0pt) node[anchor=west] {$\S_1$};    
+	\draw[black, fill=black] (6.75,1) circle (0pt) node[anchor=west] {$\S_2$};
 	%Navn på punkter 
+
+	\draw[black, fill=black] (4,1.5) circle (0pt) node[anchor=west] {$f$};
 	
-	
+	\draw [->,thick, draw=black] (2,1) -- (6.5,1);
 
 	 \draw [->, thick, draw=red] ([xshift=5pt, yshift=-1pt]v1.north) -- ([xshift=-5pt, yshift=1pt]v3.south);
      \draw [->, thick, draw=black] ([xshift=5pt, yshift=1pt]v2.south) -- ([xshift=-5pt, yshift=-1pt]v3.north);
 
 
-    
+	\draw[black, fill=black] (0,-5) circle (0pt) node[anchor=west] {Domæne};
+	\draw[black, fill=black] (6,-5) circle (0pt) node[anchor=west] {Kodomæne};
+	\draw[black, fill=black] (5.5,-2.5) circle (0pt) node[anchor=west] {Værdimængde};    
 	%Streger mellem punkterne
   \end{tikzpicture}
-  \caption{Eksempel på en todelt graf, hvor de to disjunkte delmængder, $V_1$ og $V_2$, er farvet.}
-  \label{fig:}
+  \caption{NoGeT MeD LiNeÆr Transformation}
+  \label{fig:afbild}
 \end{figure}
 %
 %
