--- a/fig/tikz/dom.tex
+++ b/fig/tikz/dom.tex
@@ -31,7 +31,7 @@
 
 	\draw[black, fill=black] (0,-5) circle (0pt) node[anchor=west] {Domæne};
 	\draw[black, fill=black] (6,-5) circle (0pt) node[anchor=west] {Kodomæne};
-	\draw[black, fill=black] (5.5,-2.5) circle (0pt) node[anchor=west] {Værdimængde};    
+	\draw[black, fill=black] (5.5,-2.5) circle (0pt) node[anchor=west] {Billedmængde};    
 	%Streger mellem punkterne
   \end{tikzpicture}
   \caption{NoGeT MeD LiNeÆr Transformation}
