--- a/fig/tikz/dom.tex
+++ b/fig/tikz/dom.tex
@@ -34,7 +34,7 @@
 	\draw[black, fill=black] (5.5,-2.5) circle (0pt) node[anchor=west] {Billedmængde};    
 	%Streger mellem punkterne
   \end{tikzpicture}
-  \caption{NoGeT MeD LiNeÆr Transformation}
+  \caption{En funktion fra $\S_1$ til $\S_2$, hvor $f(\textbf{v})=\textbf{w}$ og f$(\textbf{u})=\textbf{w}$. }
   \label{fig:afbild}
 \end{figure}
 %
